@@ -1028,8 +1028,9 @@ buildroot-0.1.0 2007-03-09 &lt;spudmonkey@racsa.co.cr&gt
 <pre><ul>
 nuttx-0.3.13 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
-	* Added mkfatfs command to NSH
-	* Added mkfifo command to NSH
+	* Added mkfatfs, mkfifo, sleep, usleep and nice commands to NSH
+	* NSH will not execute commands in background
+	* sched_get_priority_max/min returned error on SCHED_RR
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
