@@ -52,7 +52,7 @@
 
 /* This is the maximum number of arguments that will be accepted for a command */
 
-#define NSH_MAX_ARGUMENTS     6
+#define NSH_MAX_ARGUMENTS 6
 
 /* strerror() produces much nicer output but is, however, quite large and
  * will only be used if CONFIG_NSH_STRERROR is defined.
@@ -63,6 +63,32 @@
 #else
 #  define NSH_ERRNO errno
 #endif
+
+/* The following two settings are used only in the telnetd interface */
+
+#ifndef CONFIG_EXAMPLES_NSH_IOBUFFER_SIZE
+# define CONFIG_EXAMPLES_NSH_IOBUFFER_SIZE 512
+#endif
+
+#ifndef CONFIG_EXAMPLES_NSH_CMD_SIZE
+# define CONFIG_EXAMPLES_NSH_CMD_SIZE 40
+#endif
+
+/* As threads are created to handle each request, a stack must be allocated
+ * for the thread.  Use a default if the user provided no stacksize.
+ */
+
+#ifndef CONFIG_EXAMPLES_NSH_STACKSIZE
+# define CONFIG_EXAMPLES_NSH_STACKSIZE 4096
+#endif
+
+/* Define to enable dumping of all input/output buffers */
+
+#undef CONFIG_EXAMPLES_NSH_TELNETD_DUMPBUFFER
+
+/* Sizing */
+
+#define NSH_MAX_LINELEN 80
 
 /****************************************************************************
  * Public Types
@@ -113,42 +139,40 @@ extern int nsh_serialmain(void);
 
 /* Shell command handlers */
 
-#if CONFIG_NFILE_DESCRIPTORS > 0
-  extern void cmd_cat(FAR void *handle, int argc, char **argv);
-  extern void cmd_cp(FAR void *handle, int argc, char **argv);
-#endif
 extern void cmd_echo(FAR void *handle, int argc, char **argv);
 extern void cmd_exec(FAR void *handle, int argc, char **argv);
 extern void cmd_exit(FAR void *handle, int argc, char **argv);
+extern void cmd_ps(FAR void *handle, int argc, char **argv);
+
+#if CONFIG_NFILE_DESCRIPTORS > 0
+  extern void cmd_cat(FAR void *handle, int argc, char **argv);
+  extern void cmd_cp(FAR void *handle, int argc, char **argv);
+  extern void cmd_ls(FAR void *handle, int argc, char **argv);
+# ifndef CONFIG_DISABLE_MOUNTPOINT
+    extern void cmd_mkdir(FAR void *handle, int argc, char **argv);
+    extern void cmd_mkfifo(FAR void *handle, int argc, char **argv);
+    extern void cmd_rm(FAR void *handle, int argc, char **argv);
+    extern void cmd_rmdir(FAR void *handle, int argc, char **argv);
+#   ifdef CONFIG_FS_FAT
+      extern void cmd_mkfatfs(FAR void *handle, int argc, char **argv);
+      extern void cmd_mount(FAR void *handle, int argc, char **argv);
+      extern void cmd_umount(FAR void *handle, int argc, char **argv);
+#   endif /* CONFIG_FS_FAT */
+# endif /* !CONFIG_DISABLE_MOUNTPOINT */
+#endif /* CONFIG_NFILE_DESCRIPTORS */
+
 #if defined(CONFIG_NET) && CONFIG_NSOCKET_DESCRIPTORS > 0
   extern void cmd_ifconfig(FAR void *handle, int argc, char **argv);
 #endif
-#if CONFIG_NFILE_DESCRIPTORS > 0
-  extern void cmd_ls(FAR void *handle, int argc, char **argv);
-#endif
-#if !defined(CONFIG_DISABLE_MOUNTPOINT) && CONFIG_NFILE_DESCRIPTORS > 0
-  extern void cmd_mkdir(FAR void *handle, int argc, char **argv);
-# ifdef CONFIG_FS_FAT /* Need at least one filesytem in configuration */
-    extern void cmd_mkfatfs(FAR void *handle, int argc, char **argv);
-# endif /* CONFIG_FS_FAT */
-  extern void cmd_mkfifo(FAR void *handle, int argc, char **argv);
-# ifdef CONFIG_FS_FAT /* Need at least one filesytem in configuration */
-    extern void cmd_mount(FAR void *handle, int argc, char **argv);
-# endif /* CONFIG_FS_FAT */
-#endif /* !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS */
-extern void cmd_ps(FAR void *handle, int argc, char **argv);
+
 #ifndef CONFIG_DISABLE_ENVIRON
   extern void cmd_set(FAR void *handle, int argc, char **argv);
-#endif
-#if !defined(CONFIG_DISABLE_MOUNTPOINT) && CONFIG_NFILE_DESCRIPTORS > 0
-  extern void cmd_rm(FAR void *handle, int argc, char **argv);
-  extern void cmd_rmdir(FAR void *handle, int argc, char **argv);
-# ifdef CONFIG_FS_FAT /* Need at least one filesytem in configuration */
-    extern void cmd_umount(FAR void *handle, int argc, char **argv);
-# endif /* CONFIG_FS_FAT */
-#endif /* !CONFIG_DISABLE_MOUNTPOINT && CONFIG_NFILE_DESCRIPTORS */
-#ifndef CONFIG_DISABLE_ENVIRON
   extern void cmd_unset(FAR void *handle, int argc, char **argv);
-#endif
+#endif /* CONFIG_DISABLE_ENVIRON */
+
+#ifndef CONFIG_DISABLE_SIGNALS
+  extern void cmd_sleep(FAR void *handle, int argc, char **argv);
+  extern void cmd_usleep(FAR void *handle, int argc, char **argv);
+#endif /* CONFIG_DISABLE_SIGNALS */
 
 #endif /* __NSH_H */
